[project]
name = "eron"
version = "0.1.0"
description = ""
authors = [
    {name = "robiulsunnyemon",email = "robiulsunyemon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi[standard] (>=0.127.0,<0.128.0)",
    "motor (==3.6.0)",
    "beanie (>=1.25.0,<=2.0.1)",
    "aiosmtplib (>=5.0.0,<6.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "agora-token-builder (>=1.0.0,<2.0.0)",
]

[tool.poetry]
packages = [{include = "eron", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
